--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -192,6 +192,7 @@ clean-local:
 		rm -rf $(builddir)/*.par; \
 	fi; \
 	rm -rf $(builddir)/*.pyc
+	rm -rf $(builddir)/cscripts/__pycache__
 
 # Uninstall the cscripts Python module
 uninstall-local:
