Install new test file

--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -118,6 +118,7 @@ testscripts = $(srcdir)/tests/__init__.py \
 testdata = $(top_srcdir)/test/data/crab.xml \
            $(top_srcdir)/test/data/obs_unbinned.xml \
            $(top_srcdir)/test/data/obs_stacked.xml \
+           $(top_srcdir)/test/data/obs_stacked_two.xml \
            $(top_srcdir)/test/data/crab_events.fits.gz \
            $(top_srcdir)/test/data/crab_cntmap.fits.gz \
            $(top_srcdir)/test/data/crab_cntmap_small.fits.gz \
