ctools package version set to '1.1.0' and libtool version set to '2:0:0'

--- a/configure.ac
+++ b/configure.ac
@@ -28,7 +28,7 @@
 #############################################################################
 # Initialisation                                                            #
 #############################################################################
-AC_INIT([ctools], [1.1.0.dev1], [jurgen.knodlseder@irap.omp.eu], [ctools])
+AC_INIT([ctools], [1.1.0], [jurgen.knodlseder@irap.omp.eu], [ctools])
 AC_CONFIG_SRCDIR([src/ctselect/ctselect.cpp])
 AC_CONFIG_MACRO_DIR([m4])
 #AM_INIT_AUTOMAKE([gnu no-dependencies foreign])
@@ -54,7 +54,7 @@ AC_CONFIG_HEADER([config.h])
 # 5. If any interfaces have been removed or changed since the last public   #
 #    release, then set age to 0.                                            #
 #############################################################################
-CTOOLS_LT_VERSION="1:1:0"
+CTOOLS_LT_VERSION="2:0:0"
 AC_SUBST(CTOOLS_LT_VERSION)
 
 
