Change sonar properties file for test purposes (#1827)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
-sonar.projectKey=ctools
-sonar.projectName=ctools
+sonar.projectKey=ctools-test
+sonar.projectName=ctools-test
 sonar.projectVersion=1.2.0.dev1
 
 # Description
