Restore Sonar properties file after successful test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
-sonar.projectKey=ctools-test
-sonar.projectName=ctools-test
+sonar.projectKey=ctools
+sonar.projectName=ctools
 sonar.projectVersion=1.2.0.dev1
 
 # Description
