Move some test data from ctools to cscripts test folder

--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -143,7 +143,12 @@ testdata = $(top_srcdir)/test/data/crab.xml \
            $(top_srcdir)/test/data/pull.dat \
            $(top_srcdir)/test/data/sensitivity.dat \
            $(top_srcdir)/test/data/spectrum.fits \
-           $(top_srcdir)/test/data/ts.dat
+           $(top_srcdir)/test/data/ts.dat \
+           $(top_srcdir)/test/data/models_spatial.xml \
+           $(top_srcdir)/test/data/models_spectral.xml \
+           $(top_srcdir)/test/data/model_filefunction.txt \
+           $(top_srcdir)/test/data/model_map.fits.gz \
+           $(top_srcdir)/test/data/model_mapcube.fits.gz
 
 # Test data to be distributed in $(pyexecdir)/cscripts/tests/data/iactdata
 testiactdata = $(top_srcdir)/test/data/iactdata/hdu-index.fits.gz \
