--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.cxx.includeDirectories=/home/jenkins/gcc/gcc492/include/c++/4.9.2,/home/je
 sonar.cxx.missingIncludeWarnings=False
 
 # Exclusions
-sonar.exclusions=cscripts/tests/**,pyext/build/**,pyext/ctools/*_wrap.cpp,pyext/ctools/tests/**,dev/**,doc/**,test/dev/**
+sonar.exclusions=cscripts/tests/**,pyext/build/**,pyext/ctools/tools.py,pyext/ctools/*_wrap.cpp,pyext/ctools/tests/**,dev/**,doc/**,test/dev/**
 sonar.coverage.exclusions=test/science_verification.py,test/test_examples.py
 sonar.cpd.exclusions=examples/**,test/**,pyext/ctools/tools.py
 
