Added a more realistic and larger IACT test database and added various IACT test cases, restructured csiactobs to avoid code duplication and added csobsdef::obs() function to retrieve observation container

--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -155,14 +155,24 @@ testdata = $(top_srcdir)/test/data/crab.xml \
            $(top_srcdir)/test/data/model_filefunction.txt \
            $(top_srcdir)/test/data/model_map.fits.gz \
            $(top_srcdir)/test/data/model_mapcube.fits.gz \
-           $(top_srcdir)/test/data/iact_runlist.dat
+           $(top_srcdir)/test/data/iact_runlist.dat \
+           $(top_srcdir)/test/data/iact_runlist_1.dat \
+           $(top_srcdir)/test/data/iact_runlist_1.dat
 
 # Test data to be distributed in $(pyexecdir)/cscripts/tests/data/iactdata
 testiactdata = $(top_srcdir)/test/data/iactdata/hdu-index.fits.gz \
                $(top_srcdir)/test/data/iactdata/master.json \
                $(top_srcdir)/test/data/iactdata/obs-index.fits.gz \
-               $(top_srcdir)/test/data/iactdata/irf_file.fits.gz \
-               $(top_srcdir)/test/data/iactdata/events.fits.gz
+               $(top_srcdir)/test/data/iactdata/events/irf_file.fits.gz \
+               $(top_srcdir)/test/data/iactdata/events/events_0.fits.gz \
+               $(top_srcdir)/test/data/iactdata/events/events_1.fits.gz \
+               $(top_srcdir)/test/data/iactdata/events/events_2.fits.gz \
+               $(top_srcdir)/test/data/iactdata/events/events_3.fits.gz \
+               $(top_srcdir)/test/data/iactdata/events/events_4.fits.gz \
+               $(top_srcdir)/test/data/iactdata/events/events_5.fits.gz \
+               $(top_srcdir)/test/data/iactdata/events/events_6.fits.gz \
+               $(top_srcdir)/test/data/iactdata/events/events_7.fits.gz \
+               $(top_srcdir)/test/data/iactdata/events/events_8.fits.gz              
 
 # Install scripts, parfiles, test scripts and test data. Note that we don't
 # need to prepend $(DESTDIR) here (not fully clear why, but that's the way
